# CL3O

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/airfoils/: e169_AirfoilData.json  wortmannfx63137_AirfoilData.json
data/loads/: MainWing_a=0.00_v=87.97ms.txt  da62_ExLoadsData.json  da62_InLoadsData.json  da62_InLoadsData_TESTE.json
data/materials/: MAT_CFRP_AP16_LaminateData.json  MAT_CFRP_AS4_AP24_LaminateData.json  MAT_CFRP_AS4_CRS24_LaminateData.json  MAT_CFRP_AS4_QI24_LaminateData.json  MAT_CFRP_AS4_UD24_LaminateData.json  MAT_CFRP_CRS16_LaminateData.json  MAT_CFRP_HARD16_LaminateData.json  MAT_CFRP_IM7_AP24_LaminateData.json  MAT_CFRP_IM7_CRS24_LaminateData.json  MAT_CFRP_IM7_QI24_LaminateData.json  (+9 more)
docs/: Femap_viga_cantilever_2D.xlsx  Femap_viga_cantilever_3D.xlsx  apendiceA.tex
misc/: build_database.py
src/: Constants.py  main.py
tests/: conftest.py  test_airfoil.py  test_disp_margins.py  test_geom_properties.py  test_main_pipeline.py  test_mesh_builder.py  test_msa_solver.py  test_optimization.py  test_plot_airfoil.py  test_plot_cwss.py  test_plot_msa.py  test_plot_section.py  test_plot_wing.py  test_post_processing_integration.py  test_regression_golden.py  test_results_writer.py  test_section_decode.py  test_stats.py  test_stress_recovery.py  test_tsw_failure.py  test_ui_backend.py  test_utils.py  test_wing.py
tools/: compare_runs.py  copy_pasta.py  fea_validation.csv  geom_validation.csv  profile_gen.py  sensitivity_analysis.py  stats.py  tune_de.py  tune_penalty.py
(+283 files in other folders)
