[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cl3o"
version = "1.0.0"
description = "Composite Lifting Surface Structural Sizing & Optimization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Pedro Henrique Reis da Silva Lima" },
]
keywords = ["composite", "wing", "structural-optimization", "fea", "differential-evolution"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

# Core scientific stack. Lower bounds are the known-good versions the project
# is developed against; newer releases are expected to work.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "vtk>=9.3",
    "pandas>=2.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# Visualization UI backend (FastAPI server that serves the React SPA + JSON API).
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# Standalone desktop launcher (native OS window).
desktop = [
    "pywebview>=5.0",
]
# Test / development tooling.
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running FEA / DE / plot tests (deselect with '-m \"not slow\"')",
    "integration: requires real JSON database files on disk",
]
